--- a/style/layouts/_bootstrap-4-grid.scss
+++ b/style/layouts/_bootstrap-4-grid.scss
@@ -23,6 +23,9 @@ html {
   width: 100%;
   margin-right: auto;
   margin-left: auto;
+  @media(max-width: 979px){
+    padding: 0 10px;
+  }
 }
 
 @media (min-width: 576px) {
